// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionBarComponent renders correctly with SelectionMode and SingleItemSelected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ActionBarComponent
    actions={
      Array [
        TabBarActionModel {
          "callback": [MockFunction],
          "icon": "Action 1",
          "id": 0,
        },
        TabBarActionModel {
          "callback": [MockFunction],
          "icon": "Action 2",
          "id": 1,
        },
        TabBarActionModel {
          "callback": [MockFunction],
          "icon": "Action 3",
          "id": 2,
        },
      ]
    }
    isSelectionMode={false}
    isSingleItemSelected={true}
    selectionModeActions={
      Array [
        TabBarActionModel {
          "callback": [MockFunction],
          "icon": "Action 1",
          "id": 3,
        },
        TabBarActionModel {
          "callback": [MockFunction],
          "icon": "Action 2",
          "id": 4,
        },
        TabBarActionModel {
          "callback": [MockFunction],
          "icon": "Action 3",
          "id": 5,
        },
        TabBarActionModel {
          "callback": [MockFunction],
          "icon": "Action 3",
          "id": 6,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "backgroundColor": "#2684FF",
              "borderRadius": 20,
              "flexDirection": "row",
              "height": 102,
              "justifyContent": "space-around",
              "width": 710,
            }
          }
        >
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "height": 100,
                "justifyContent": "center",
                "paddingVertical": 20,
              }
            }
          >
            <Component>
              <Image
                source="Action 1"
                style={
                  Object {
                    "height": 60,
                    "width": 60,
                  }
                }
              />
            </Component>
          </TouchableOpacity>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
                Object {
                  "borderColor": "rgba(255, 255, 255, 0.4)",
                  "borderLeftWidth": 2,
                },
              ]
            }
          >
            <Component>
              <Image
                source="Action 2"
                style={
                  Object {
                    "height": 60,
                    "width": 60,
                  }
                }
              />
            </Component>
          </TouchableOpacity>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
                Object {
                  "borderColor": "rgba(255, 255, 255, 0.4)",
                  "borderLeftWidth": 2,
                },
              ]
            }
          >
            <Component>
              <Image
                source="Action 3"
                style={
                  Object {
                    "height": 60,
                    "width": 60,
                  }
                }
              />
            </Component>
          </TouchableOpacity>
        </Component>,
        null,
      ],
      "style": Array [
        Object {
          "alignItems": "center",
          "bottom": 14,
          "marginHorizontal": 20,
          "position": "absolute",
        },
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                }
              }
            >
              <Component>
                <Image
                  source="Action 1"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </Component>
            </TouchableOpacity>,
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "rgba(255, 255, 255, 0.4)",
                    "borderLeftWidth": 2,
                  },
                ]
              }
            >
              <Component>
                <Image
                  source="Action 2"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </Component>
            </TouchableOpacity>,
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "rgba(255, 255, 255, 0.4)",
                    "borderLeftWidth": 2,
                  },
                ]
              }
            >
              <Component>
                <Image
                  source="Action 3"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </Component>
            </TouchableOpacity>,
          ],
          "style": Object {
            "backgroundColor": "#2684FF",
            "borderRadius": 20,
            "flexDirection": "row",
            "height": 102,
            "justifyContent": "space-around",
            "width": 710,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <Component>
                <Image
                  source="Action 1"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </Component>,
              "onPress": [MockFunction],
              "style": Object {
                "alignItems": "center",
                "flex": 1,
                "height": 100,
                "justifyContent": "center",
                "paddingVertical": 20,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Image
                  source="Action 1"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": "Action 1",
                  "style": Object {
                    "height": 60,
                    "width": 60,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <Component>
                <Image
                  source="Action 2"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </Component>,
              "onPress": [MockFunction],
              "style": Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
                Object {
                  "borderColor": "rgba(255, 255, 255, 0.4)",
                  "borderLeftWidth": 2,
                },
              ],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Image
                  source="Action 2"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": "Action 2",
                  "style": Object {
                    "height": 60,
                    "width": 60,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <Component>
                <Image
                  source="Action 3"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </Component>,
              "onPress": [MockFunction],
              "style": Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
                Object {
                  "borderColor": "rgba(255, 255, 255, 0.4)",
                  "borderLeftWidth": 2,
                },
              ],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Image
                  source="Action 3"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": "Action 3",
                  "style": Object {
                    "height": 60,
                    "width": 60,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "backgroundColor": "#2684FF",
                "borderRadius": 20,
                "flexDirection": "row",
                "height": 102,
                "justifyContent": "space-around",
                "width": 710,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                }
              }
            >
              <Component>
                <Image
                  source="Action 1"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </Component>
            </TouchableOpacity>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "rgba(255, 255, 255, 0.4)",
                    "borderLeftWidth": 2,
                  },
                ]
              }
            >
              <Component>
                <Image
                  source="Action 2"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </Component>
            </TouchableOpacity>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "rgba(255, 255, 255, 0.4)",
                    "borderLeftWidth": 2,
                  },
                ]
              }
            >
              <Component>
                <Image
                  source="Action 3"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </Component>
            </TouchableOpacity>
          </Component>,
          null,
        ],
        "style": Array [
          Object {
            "alignItems": "center",
            "bottom": 14,
            "marginHorizontal": 20,
            "position": "absolute",
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  }
                }
              >
                <Component>
                  <Image
                    source="Action 1"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </Component>
              </TouchableOpacity>,
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "height": 100,
                      "justifyContent": "center",
                      "paddingVertical": 20,
                    },
                    Object {
                      "borderColor": "rgba(255, 255, 255, 0.4)",
                      "borderLeftWidth": 2,
                    },
                  ]
                }
              >
                <Component>
                  <Image
                    source="Action 2"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </Component>
              </TouchableOpacity>,
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "height": 100,
                      "justifyContent": "center",
                      "paddingVertical": 20,
                    },
                    Object {
                      "borderColor": "rgba(255, 255, 255, 0.4)",
                      "borderLeftWidth": 2,
                    },
                  ]
                }
              >
                <Component>
                  <Image
                    source="Action 3"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </Component>
              </TouchableOpacity>,
            ],
            "style": Object {
              "backgroundColor": "#2684FF",
              "borderRadius": 20,
              "flexDirection": "row",
              "height": 102,
              "justifyContent": "space-around",
              "width": 710,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <Component>
                  <Image
                    source="Action 1"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </Component>,
                "onPress": [MockFunction],
                "style": Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Image
                    source="Action 1"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": "Action 1",
                    "style": Object {
                      "height": 60,
                      "width": 60,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <Component>
                  <Image
                    source="Action 2"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </Component>,
                "onPress": [MockFunction],
                "style": Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "rgba(255, 255, 255, 0.4)",
                    "borderLeftWidth": 2,
                  },
                ],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Image
                    source="Action 2"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": "Action 2",
                    "style": Object {
                      "height": 60,
                      "width": 60,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <Component>
                  <Image
                    source="Action 3"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </Component>,
                "onPress": [MockFunction],
                "style": Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "rgba(255, 255, 255, 0.4)",
                    "borderLeftWidth": 2,
                  },
                ],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Image
                    source="Action 3"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": "Action 3",
                    "style": Object {
                      "height": 60,
                      "width": 60,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ActionBarComponent renders correctly with not SelectionMode and not SingleItemSelected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ActionBarComponent
    actions={
      Array [
        TabBarActionModel {
          "callback": [MockFunction],
          "icon": "Action 1",
          "id": 7,
        },
        TabBarActionModel {
          "callback": [MockFunction],
          "icon": "Action 2",
          "id": 8,
        },
        TabBarActionModel {
          "callback": [MockFunction],
          "icon": "Action 3",
          "id": 9,
        },
      ]
    }
    isSelectionMode={false}
    isSingleItemSelected={false}
    selectionModeActions={
      Array [
        TabBarActionModel {
          "callback": [MockFunction],
          "icon": "Action 1",
          "id": 10,
        },
        TabBarActionModel {
          "callback": [MockFunction],
          "icon": "Action 2",
          "id": 11,
        },
        TabBarActionModel {
          "callback": [MockFunction],
          "icon": "Action 3",
          "id": 12,
        },
        TabBarActionModel {
          "callback": [MockFunction],
          "icon": "Action 3",
          "id": 13,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "backgroundColor": "#2684FF",
              "borderRadius": 20,
              "flexDirection": "row",
              "height": 102,
              "justifyContent": "space-around",
              "width": 710,
            }
          }
        >
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "height": 100,
                "justifyContent": "center",
                "paddingVertical": 20,
              }
            }
          >
            <Component>
              <Image
                source="Action 1"
                style={
                  Object {
                    "height": 60,
                    "width": 60,
                  }
                }
              />
            </Component>
          </TouchableOpacity>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
                Object {
                  "borderColor": "rgba(255, 255, 255, 0.4)",
                  "borderLeftWidth": 2,
                },
              ]
            }
          >
            <Component>
              <Image
                source="Action 2"
                style={
                  Object {
                    "height": 60,
                    "width": 60,
                  }
                }
              />
            </Component>
          </TouchableOpacity>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
                Object {
                  "borderColor": "rgba(255, 255, 255, 0.4)",
                  "borderLeftWidth": 2,
                },
              ]
            }
          >
            <Component>
              <Image
                source="Action 3"
                style={
                  Object {
                    "height": 60,
                    "width": 60,
                  }
                }
              />
            </Component>
          </TouchableOpacity>
        </Component>,
        null,
      ],
      "style": Array [
        Object {
          "alignItems": "center",
          "bottom": 14,
          "marginHorizontal": 20,
          "position": "absolute",
        },
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                }
              }
            >
              <Component>
                <Image
                  source="Action 1"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </Component>
            </TouchableOpacity>,
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "rgba(255, 255, 255, 0.4)",
                    "borderLeftWidth": 2,
                  },
                ]
              }
            >
              <Component>
                <Image
                  source="Action 2"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </Component>
            </TouchableOpacity>,
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "rgba(255, 255, 255, 0.4)",
                    "borderLeftWidth": 2,
                  },
                ]
              }
            >
              <Component>
                <Image
                  source="Action 3"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </Component>
            </TouchableOpacity>,
          ],
          "style": Object {
            "backgroundColor": "#2684FF",
            "borderRadius": 20,
            "flexDirection": "row",
            "height": 102,
            "justifyContent": "space-around",
            "width": 710,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "7",
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <Component>
                <Image
                  source="Action 1"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </Component>,
              "onPress": [MockFunction],
              "style": Object {
                "alignItems": "center",
                "flex": 1,
                "height": 100,
                "justifyContent": "center",
                "paddingVertical": 20,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Image
                  source="Action 1"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": "Action 1",
                  "style": Object {
                    "height": 60,
                    "width": 60,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "8",
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <Component>
                <Image
                  source="Action 2"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </Component>,
              "onPress": [MockFunction],
              "style": Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
                Object {
                  "borderColor": "rgba(255, 255, 255, 0.4)",
                  "borderLeftWidth": 2,
                },
              ],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Image
                  source="Action 2"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": "Action 2",
                  "style": Object {
                    "height": 60,
                    "width": 60,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "9",
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <Component>
                <Image
                  source="Action 3"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </Component>,
              "onPress": [MockFunction],
              "style": Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
                Object {
                  "borderColor": "rgba(255, 255, 255, 0.4)",
                  "borderLeftWidth": 2,
                },
              ],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Image
                  source="Action 3"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": "Action 3",
                  "style": Object {
                    "height": 60,
                    "width": 60,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "backgroundColor": "#2684FF",
                "borderRadius": 20,
                "flexDirection": "row",
                "height": 102,
                "justifyContent": "space-around",
                "width": 710,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                }
              }
            >
              <Component>
                <Image
                  source="Action 1"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </Component>
            </TouchableOpacity>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "rgba(255, 255, 255, 0.4)",
                    "borderLeftWidth": 2,
                  },
                ]
              }
            >
              <Component>
                <Image
                  source="Action 2"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </Component>
            </TouchableOpacity>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "rgba(255, 255, 255, 0.4)",
                    "borderLeftWidth": 2,
                  },
                ]
              }
            >
              <Component>
                <Image
                  source="Action 3"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </Component>
            </TouchableOpacity>
          </Component>,
          null,
        ],
        "style": Array [
          Object {
            "alignItems": "center",
            "bottom": 14,
            "marginHorizontal": 20,
            "position": "absolute",
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  }
                }
              >
                <Component>
                  <Image
                    source="Action 1"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </Component>
              </TouchableOpacity>,
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "height": 100,
                      "justifyContent": "center",
                      "paddingVertical": 20,
                    },
                    Object {
                      "borderColor": "rgba(255, 255, 255, 0.4)",
                      "borderLeftWidth": 2,
                    },
                  ]
                }
              >
                <Component>
                  <Image
                    source="Action 2"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </Component>
              </TouchableOpacity>,
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "height": 100,
                      "justifyContent": "center",
                      "paddingVertical": 20,
                    },
                    Object {
                      "borderColor": "rgba(255, 255, 255, 0.4)",
                      "borderLeftWidth": 2,
                    },
                  ]
                }
              >
                <Component>
                  <Image
                    source="Action 3"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </Component>
              </TouchableOpacity>,
            ],
            "style": Object {
              "backgroundColor": "#2684FF",
              "borderRadius": 20,
              "flexDirection": "row",
              "height": 102,
              "justifyContent": "space-around",
              "width": 710,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "7",
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <Component>
                  <Image
                    source="Action 1"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </Component>,
                "onPress": [MockFunction],
                "style": Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Image
                    source="Action 1"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": "Action 1",
                    "style": Object {
                      "height": 60,
                      "width": 60,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "8",
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <Component>
                  <Image
                    source="Action 2"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </Component>,
                "onPress": [MockFunction],
                "style": Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "rgba(255, 255, 255, 0.4)",
                    "borderLeftWidth": 2,
                  },
                ],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Image
                    source="Action 2"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": "Action 2",
                    "style": Object {
                      "height": 60,
                      "width": 60,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "9",
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <Component>
                  <Image
                    source="Action 3"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </Component>,
                "onPress": [MockFunction],
                "style": Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "rgba(255, 255, 255, 0.4)",
                    "borderLeftWidth": 2,
                  },
                ],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Image
                    source="Action 3"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": "Action 3",
                    "style": Object {
                      "height": 60,
                      "width": 60,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
